src/css/components/reactor.less
.reactor {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    min-width: 500px;
    overflow: hidden;
    background-color: @bg-color5;
    border-bottom: 1px solid lighten(@bg-color5, 6%);
    box-shadow: inset 0 0 40px rgba(0, 0, 0, 0.5);
    position: relative;
    margin: 0 auto;
    padding: 20px;

    .reactor-spectrum {
        position: relative;
        background-color: @bg-color5;
        border: 1px solid lighten(@bg-color5, 6%);
    }

    .reactor-output {
        margin-left: 10px;
        border: 1px solid lighten(@bg-color5, 6%);
    }
}

.analyzer-selection-overlay {
    position: absolute;
    border: 1px solid lighten(@color1, 10%);
    top: 1px;
}

